--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "type": "git",
     "url": "git@github.com:hexlet-components/projects-frontend-l4-server.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "MagicDuck",
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "core-js": "^3.21.0",
     "debug": "^4.3.3",
     "fastify": "^3.27.1",
@@ -32,14 +35,23 @@
     "fastify-sensible": "^3.1.2",
     "fastify-socket.io": "^3.0.0",
     "fastify-static": "^4.5.0",
+    "formik": "^2.2.9",
     "http-errors": "^2.0.0",
+    "i18next": "^21.6.12",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "point-of-view": "^5.1.0",
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-toastify": "^8.2.0",
+    "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
